Fixed janky scroll, added smooth scroll
Previously on clicking navbar items it instantly scrolls to the section, which does not look good.
Now on clicking navbar items it smoothly scrolls to the respective section.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Abel&family=Inconsolata:wght@300;400;500;700&display=swap");
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Abel", sans-serif;
   font-size: large;
